--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "express": "^4.16.2",
+    "express-jwt": "^5.3.0",
     "jsonwebtoken": "^8.1.0",
     "mongoose": "^4.13.7",
     "mongoose-unique-validator": "^1.0.6",
     "morgan": "^1.9.0",
     "passport": "^0.4.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "slug": "^0.9.1"
   }
 }
